# advent-of-rust

./: .clang-format  .dockerignore  .gitignore  .justfile  Cargo.toml  README.md  build.rs  inputs.sh
.githooks/: pre-commit
.github/workflows/: main.yml
2015/: Cargo.toml  README.md
2015/day1/: Cargo.toml  day1.rs
2015/day10/: Cargo.toml  day10.rs
2015/day11/: day11.rs
2015/day12/: Cargo.toml  day12.rs
2015/day13/: Cargo.toml  day13.py  day13.rs
2015/day14/: Cargo.toml  day14.rs
2015/day15/: Cargo.toml  day15.rs
2015/day16/: Cargo.toml  day16.py  day16.rs
2015/day17/: Cargo.toml  day17.rs
2015/day18/: Cargo.toml  anim.sh  day18.rs
2015/day19/: Cargo.toml  day19.rs
2015/day2/: Cargo.toml  day2.rs
2015/day20/: Cargo.toml  day20.rs
2015/day21/: day21.py  day21.rs
2015/day22/: Cargo.toml  day22.rs
2015/day23/: day23.py  day23.rs
2015/day24/: Cargo.toml  day24.py  day24.rs
2015/day25/: day25.rs
2015/day3/: Cargo.toml  day3.rs
2015/day4/: Cargo.toml  day4.rs
2015/day5/: Cargo.toml  day5.rs
2015/day6/: Cargo.toml  day6.rs
2015/day7/: Cargo.toml  day7.rs
2015/day8/: Cargo.toml  day8.rs
2015/day9/: Cargo.toml  day9.rs
2016/: Cargo.toml  README.md  gendoc.sh
2016/aoc/: Cargo.toml
2016/assembunny/: Cargo.toml  asm.rs  bonus.txt
2016/day1/: day1.rs
2016/day10/: Cargo.toml  day10.rs  input.txt
2016/day11/: Cargo.toml  day11.rs
2016/day12/: Cargo.toml  day12.rs
2016/day13/: Cargo.toml  day13.rs
2016/day14/: Cargo.toml  day14.rs  input.txt
2016/day15/: Cargo.toml  day15.rs  input.txt
2016/day16/: Cargo.toml  day16.rs  input.txt
2016/day17/: Cargo.toml  day17.rs
2016/day18/: Cargo.toml  day18.rs
2016/day19/: Cargo.toml  day19.rs
2016/day2/: Cargo.toml  day2.rs
2016/day20/: Cargo.toml  day20.rs
2016/day21/: Cargo.toml  day21.rs
2016/day22/: Cargo.toml  day22.rs
2016/day23/: Cargo.toml  day23.rs  input.txt
2016/day24/: Cargo.toml  day24.rs
2017/: Cargo.toml  README.md
2017/aoc2017/: Cargo.toml
2017/aoc2017/src/: hex.rs  knot.rs  lib.rs
2017/day1/: day1.py  day1.rs
2017/day10/: Cargo.toml  day10.rs  lib.rs
2017/day11/: day11.py  day11.rs
2017/day12/: day12.py  day12.rs
2017/day13/: Cargo.toml  day13.rs
2017/day14/: Cargo.toml  day14.rs
2017/day15/: Cargo.toml  day15.rs
2017/day16/: Cargo.toml  day16.rs
2017/day17/: day17.rs
2017/day18/: day18.rs
2017/day19/: day19.py  day19.rs
2017/day2/: Cargo.toml  day2.py  day2.rs
2017/day20/: Cargo.toml  day20.py  day20.rs
2017/day21/: Cargo.toml  day21.py  day21.rs
2017/day22/: day22.py  day22.rs
2017/day23/: Cargo.toml  day23.rs
2017/day24/: Cargo.toml  day24.py  day24.rs
2017/day25/: Cargo.toml  day25.py  day25.rs
2017/day3/: day3.py  day3.rs
2017/day4/: day4.py  day4.rs
2017/day5/: day5.py  day5.rs
2017/day6/: Cargo.toml  day6.py  day6.rs
2017/day7/: Cargo.toml  day7.py  day7.rs
2017/day8/: Cargo.toml  day8.py  day8.rs
2017/day9/: day9.py  day9.rs
2018/: Cargo.toml  README.md
2019/: Cargo.toml  README.md
2020/: Cargo.toml  README.md
2021/: Cargo.toml  README.md
2021/day5/: Cargo.toml  day5.py  day5.rs
2022/: Cargo.toml  README.md  check.sh
2023/: Cargo.toml  README.md
2024/: Cargo.toml  README.md
aoc/: Cargo.toml
day1/: README.md  day1.py  day1.rs
day10/: day10.py  day10.rs
day11/: Cargo.toml  day11.rs
day13/: Cargo.toml
day14/: input.txt  step2.py
day15/: day15.rs
day16/: input.txt
day17/: Cargo.toml  day17.rs
day18/: day18.py
day19/: Cargo.toml  day19.rs
day2/: Cargo.toml  README.md  day2.rs  day2_step2  day2_step2.rs
day20/: day20.rs
day21/: day21.rs
day22/: Cargo.toml
day24/: Cargo.toml  input.txt
day25/: Cargo.toml  day25.py  day25.rs
day3/: Cargo.toml  day3.rs
day4/: day4.py  day4.rs  input.txt
day5/: day5.py  day5.rs
day6/: day6.py  day6.rs
day7/: Cargo.toml  day7.rs  input.txt
day8/: day8.py  day8.rs
day9/: Cargo.toml
one/: Cargo.toml  m.py
scripts/: Dockerfile  Dockerfile-alpine  Dockerfile-debian  Dockerfile-fedora  Dockerfile-sid  Dockerfile.pypy3  all_python.sh  allpython.sh  answers.py  aoc.py  bench.sh  check.sh  compare.py  debian-packages.txt  elapsed.py  extract_drawing.py  from_scratch.py  gendoc.sh  inputs.py  lint_python.sh  lint_rust.sh  local-uv-python.py  puzzle.sh  requirements.txt  run-shuf.sh  runall.py  score.py  timings.py  xmas.py
src/: lib.rs  main.rs  rundb.rs
(+1097 files in other folders)
