[package]
name = "aor"
version = "1.2.0"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/rene-d/advent-of-rust"

[features]
ascii = []
anim = ["image"]

[build-dependencies]
cc = "*"

[dependencies]
aoc = { path = "crates/aoc" }
assembunny = { path = "crates/assembunny" }
intcode = { path = "crates/intcode" }

rustc-hash = "*"
colored = "*"
pest = { version = "*", default-features = false }
pest_derive = { version = "*", default-features = true }
petgraph = "*"
rand = "*"
regex = "*"
rustworkx-core = "*"
scan_fmt = "*"
serde_json = "*"
strum = { version = "*", features = ["strum_macros", "derive"] }
strum_macros = "*"
text_io = "*"
z3 = "*"
nom = "8"
num = "*"
num-traits = "*"
itertools = "*"
lazy_static = "*"
md5 = "*"
image = { version = "*", optional = true }
indicatif = "*"
fraction = "*"
geo = "*"
geo-types = "*"
bytecount = "*"
divisors = "*"
sha2 = "0.10.8"
# rusqlite = "0.37.0"

[lints.clippy]
pedantic = "forbid"
nursery = "forbid"
