[package]
name = "aor"
version = "1.2.0"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/rene-d/advent-of-rust"

[features]
ascii = []
anim = ["image"]
timingsdb = ["sha2", "libsql", "tokio"]

[build-dependencies]
cc = "*"

[dependencies]
aoc = { path = "crates/aoc" }
assembunny = { path = "crates/assembunny" }
intcode = { path = "crates/intcode" }

rustc-hash = "*"
colored = "*"
pest = { version = "*", default-features = false }
pest_derive = { version = "*", default-features = true }
petgraph = "*"
rand = "*"
regex = "*"
rustworkx-core = "*"
scan_fmt = "*"
serde_json = "*"
toml = "0.8"
strum = { version = "*", features = ["strum_macros", "derive"] }
strum_macros = "*"
text_io = "*"
z3 = "*"
nom = "8"
num = "*"
num-traits = "*"
num-bigint = "*"
num-rational = "*"
fraction = "*"
indicatif = "*"
itertools = "*"
lazy_static = "*"
md5 = "*"
image = { version = "*", optional = true }
geo = "*"
geo-types = "*"
bytecount = "*"
rayon = "*"
good_lp = { version = "*", features = ["microlp"], default-features = false }
sha2 = { version = "*", optional = true }
libsql = { version = "*", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[lints.clippy]
pedantic = "forbid"
nursery = "forbid"
