[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
regex = "1.7.1"
clap = { version = "4.1.1", features = ["derive"] }

[[bin]]
name = "day5"
path = "day5.rs"
